--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <display-name>3</display-name>
 
     <welcome-file-list>
-        <welcome-file>test.jsp</welcome-file>
+        <welcome-file>jsp/test.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
