--- a/ivy.xml
+++ b/ivy.xml
@@ -5,6 +5,9 @@
                    "http://ant.apache.org/ivy/schemas/ivy.xsd">
   <info organisation="me.falarmit" module="falarmitme" />
 	<dependencies>
-       <dependency org="log4j" name="log4j" rev="1.2.14" conf="default->master" />
+       <dependency org="log4j" name="log4j" rev="1.2.14" conf="default->master"/>
+       <dependency org="org.springframework" name="spring-core" rev="3.2.3.RELEASE"/>
+       <dependency org="org.springframework" name="spring-webmvc" rev="3.2.3.RELEASE" conf="default"/>
+       <dependency org="org.springframework" name="spring-web" rev="3.2.3.RELEASE" conf="default->master"/>
     </dependencies>  
 </ivy-module>
